kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapper
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: webapper
        image: rchicoli/webapper:latest
        imagePullPolicy: Always
        ports:
        - name: webservice
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 120Mi
            cpu: 250m
          limits:
            memory: 150Mi
            cpu: 500m
        livenessProbe:
          httpGet:
            path: /hostname
            port: 8080
            httpHeaders:
            - name: X-Custom-Health
              value: kubernetes
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 2
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            httpHeaders:
            - name: X-Custom-Health
              value: kubernetes
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 10000
          runAsGroup: 10000
          runAsNonRoot: true
          capabilities:
            drop:
            - all
            add: ["SYS_CHROOT"]
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - webapper
            topologyKey: "kubernetes.io/hostname"
