kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: webapper
spec:
  ports:
  - name: webservice
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
