kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx-internal
  name: webapper
spec:
  rules:
  - host: webapper.shared.home.local
    http:
      paths:
      - backend:
          serviceName: webapper
          servicePort: 80
        path: /
